--- a/lec62/vite-project/src/components/Counter.css
+++ b/lec62/vite-project/src/components/Counter.css
@@ -1,5 +1,5 @@
 .counter-container {
-    background-color: beige;
+    background-color: rgb(221, 221, 32);
     display: flex;
     flex-direction: column;
     gap: 15px;
